--- a/src/AboutDialog.ui
+++ b/src/AboutDialog.ui
@@ -154,5 +154,25 @@
  <resources>
   <include location="icons.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>closeButton</sender>
+   <signal>clicked()</signal>
+   <receiver>AboutDialog</receiver>
+   <slot>onCloseButtonClicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>446</x>
+     <y>290</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>247</x>
+     <y>157</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>onCloseButtonClicked()</slot>
+ </slots>
 </ui>
