--- a/src/views/SourcesView.ui
+++ b/src/views/SourcesView.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>SourcesView</class>
  <widget class="QDialog" name="SourcesView">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>424</width>
+    <height>246</height>
+   </rect>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -67,19 +75,38 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ce::CodeEditor</class>
-   <extends>QPlainTextEdit</extends>
-   <header>codeeditor/CodeEditor.h</header>
-  </customwidget>
-  <customwidget>
    <class>StartStopButton</class>
    <extends>QPushButton</extends>
    <header>views/StartStopButton.h</header>
   </customwidget>
+  <customwidget>
+   <class>ce::CodeEditor</class>
+   <extends>QPlainTextEdit</extends>
+   <header>codeeditor/CodeEditor.h</header>
+  </customwidget>
  </customwidgets>
  <resources>
   <include location="../icons.qrc"/>
-  <include location="../icons.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>startStopButton</sender>
+   <signal>clicked()</signal>
+   <receiver>SourcesView</receiver>
+   <slot>onStartStopButtonClicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>48</x>
+     <y>23</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>211</x>
+     <y>122</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>onStartStopButtonClicked()</slot>
+ </slots>
 </ui>
